tests/error/func_error_scan2.gw
// [contains] unknown type
function void test() { skfuv sd; }
